[project]
name = "sql-agent"
version = "0.1.0"
description = "AI-powered SQL assistant with plan-based execution for natural language data queries and visualization"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Andrej Čičmanský", email = "andrej.cicmansky@gmail.com" }
]
keywords = ["ai", "sql", "langchain", "langgraph", "data-analysis", "nlp", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gradio>=5.49.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandasql>=0.7.3",
    "pre-commit>=4.4.0",
    "pydantic>=2.11.10",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.black]
line-length = 110

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/ACicmansky/sql-agent"
Documentation = "https://github.com/ACicmansky/sql-agent/blob/main/README.md"
Repository = "https://github.com/ACicmansky/sql-agent"

[project.scripts]
sql-agent = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
